[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/Icons/towerverse_icon.png" type="Texture" id=1]
[ext_resource path="res://assets/Fonts/Roboto-Medium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/Scripts/StartMenu.gd" type="Script" id=3]
[ext_resource path="res://assets/Fonts/Ubuntu-Medium.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]
size = 90
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 60.0
content_margin_right = 60.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.317647, 0.0823529, 0.717647, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.576471, 0.352941, 0.952941, 1 )
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
corner_detail = 10

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 60.0
content_margin_right = 60.0
content_margin_top = 18.0
content_margin_bottom = 18.0
bg_color = Color( 0.317647, 0.0823529, 0.717647, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.898039, 0.862745, 0.956863, 1 )
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
corner_detail = 10

[sub_resource type="DynamicFontData" id=4]
font_path = "res://assets/Fonts/Roboto-Regular.ttf"

[sub_resource type="DynamicFont" id=5]
size = 70
use_filter = true
font_data = SubResource( 4 )

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 60.0
content_margin_right = 60.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.109804, 0.12549, 0.105882, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.705882, 0.705882, 0.705882, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
corner_detail = 10

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 60.0
content_margin_right = 60.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.109804, 0.12549, 0.105882, 1 )
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.929412, 0.929412, 0.929412, 1 )
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
corner_detail = 10

[sub_resource type="StyleBoxFlat" id=8]
content_margin_left = 60.0
content_margin_right = 60.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.109804, 0.12549, 0.105882, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.705882, 0.705882, 0.705882, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
corner_detail = 10

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 60.0
content_margin_right = 60.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.109804, 0.12549, 0.105882, 1 )
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.929412, 0.929412, 0.929412, 1 )
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
corner_detail = 10

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.317647, 0.0823529, 0.717647, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20

[sub_resource type="DynamicFont" id=11]
size = 40
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="DynamicFont" id=13]
size = 40
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=14]
size = 30
use_filter = true
font_data = ExtResource( 2 )

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="top_container" type="VBoxContainer" parent="."]
anchor_right = 1.0
margin_top = 33.0
margin_bottom = 283.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="towerverse_icon" type="TextureRect" parent="top_container"]
margin_right = 1920.0
margin_bottom = 128.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="towerverse_logo" type="Label" parent="top_container"]
margin_left = 708.0
margin_top = 148.0
margin_right = 1211.0
margin_bottom = 250.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.443137, 0.00392157, 0.92549, 1 )
text = "TowerVerse"

[node name="button_container" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -211.0
margin_top = -127.0
margin_right = 210.0
margin_bottom = 215.0
size_flags_horizontal = 3
custom_constants/separation = 13
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play_button" type="Button" parent="button_container"]
margin_top = 3.0
margin_right = 421.0
margin_bottom = 106.0
focus_mode = 0
size_flags_vertical = 0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 5 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="options_button" type="Button" parent="button_container"]
margin_top = 119.0
margin_right = 421.0
margin_bottom = 222.0
focus_mode = 0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 5 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="about_button" type="Button" parent="button_container"]
margin_top = 235.0
margin_right = 421.0
margin_bottom = 338.0
focus_mode = 0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 5 )
text = "About"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bottom_container" type="PanelContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -80.0
size_flags_vertical = 10
custom_styles/panel = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gameinfo_need_account_label" type="Label" parent="bottom_container"]
visible = false
margin_left = 494.0
margin_top = 37.0
margin_right = 1426.0
margin_bottom = 83.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 11 )
text = "Login to an account to see game-related info here!
"
align = 1
valign = 1
max_lines_visible = 1

[node name="gameinfo_expand_button" type="Button" parent="bottom_container"]
margin_left = 742.0
margin_top = 11.0
margin_right = 1177.0
margin_bottom = 69.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/focus = SubResource( 12 )
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0.87451, 0.858824, 0.584314, 1 )
text = "Show latest game info"
flat = true

[node name="gameinfo_scrollbar" type="ScrollContainer" parent="bottom_container"]
visible = false
margin_right = 1920.0
margin_bottom = 120.0
follow_focus = true
scroll_horizontal_enabled = false

[node name="gameinfo_label" type="Label" parent="bottom_container/gameinfo_scrollbar"]
margin_left = 871.0
margin_right = 1049.0
margin_bottom = 456.0
size_flags_horizontal = 6
size_flags_vertical = 1
custom_fonts/font = SubResource( 14 )
text = "Update 0.2a1









hello "
align = 1

[node name="tween" type="Tween" parent="."]

[node name="tween_2" type="Tween" parent="."]

[connection signal="pressed" from="button_container/play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="bottom_container/gameinfo_expand_button" to="." method="_on_patchnotes_expand_button_pressed"]
